[package]
name = "test-solana-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
borsh = "0.9.0"
bincode = "1.3.3"
serde = "1.0.152"

[dev-dependencies]
solana-program-test = "1.14.11"
solana-sdk = "1.14.11"

[features]
test-bpf = []

[lib]
name="testsolana"
crate-type = ["cdylib", "lib"]